Fixed cropping issue with large photos

--- a/themes/photo_frame/css/photo_frame.css
+++ b/themes/photo_frame/css/photo_frame.css
@@ -391,11 +391,11 @@ a.photo-frame-progress-cancel {
 	-moz-box-shadow: 0 0 20px rgba(0, 0, 0, .7);
 	box-shadow: 0 0 20px rgba(0, 0, 0, .7);
 	z-index: 100;
+	overflow: hidden;
 }
 
 .photo-frame-crop-photo img {
-	max-width: none;
-	width: 100%;
+	max-width: 100%;
 	display: block;
 }
 
